syntax = "proto3";

option java_multiple_files = true;
option java_package = "vault";
option java_outer_classname = "Vault";
option objc_class_prefix = "VLT";

package vault;

service VaultService {
  rpc newToken (RequestNewToken) returns (Token) {
  }
  rpc fromToken (Token) returns (DataByToken) {
  }
}

message RequestNewToken {
  string customerId = 1;
  string card = 2;
  string issuer = 3;
}

message Token {
  string value = 1;
}

message DataByToken {
  string customerId = 1;
  string card = 2;
  string issuer = 3;
}